fixed swal z-index

--- a/client/src/styles/_about-us.scss
+++ b/client/src/styles/_about-us.scss
@@ -32,3 +32,10 @@
     }
   }
 }
+
+@media only screen and (min-width: 2600px) {
+  #about-us {
+    width: 2600px;
+    margin: 0 auto;
+  }
+}
