--- a/client/src/styles/_contact.scss
+++ b/client/src/styles/_contact.scss
@@ -31,3 +31,10 @@
     }
   }
 }
+
+@media only screen and (min-width: 2600px) {
+  #contact {
+    width: 2600px;
+    margin: 0 auto;
+  }
+}
