--- a/client/src/styles/_header.scss
+++ b/client/src/styles/_header.scss
@@ -68,6 +68,9 @@
     margin: 0 auto;
     height: 1000px;
   }
+  .background-image {
+    width: 2600px;
+  }
 }
 
 @media only screen and (min-width: 2600px) {
@@ -75,5 +78,8 @@
     width: 2600px;
     margin: 0 auto;
     height: 1000px;
+    .background-image {
+      width: 2600px;
+    }
   }
 }
