--- a/client/src/styles/_lightbox.scss
+++ b/client/src/styles/_lightbox.scss
@@ -154,3 +154,10 @@
     }
   }
 }
+
+@media only screen and (min-width: 2600px) {
+  .gallery {
+    width: 2600px;
+    margin: 0 auto;
+  }
+}
