--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -43,3 +43,8 @@ h3 {
   }
   padding-bottom: 50px;
 }
+
+.swal2-container {
+  // position: relative;
+  z-index: 9999;
+}
